[gd_scene load_steps=6 format=3 uid="uid://b2dk7whx4cjl2"]

[ext_resource type="Theme" uid="uid://5i8dq35a04rk" path="res://assets/themes/signup_menu.tres" id="1_np7sg"]
[ext_resource type="Script" uid="uid://3uesbhjuvcm6" path="res://scripts/pages_main.gd" id="2_3jqky"]
[ext_resource type="Material" uid="uid://cunv4xrt0qmlh" path="res://assets/shaders/title_shader_material.tres" id="3_3jqky"]
[ext_resource type="Script" uid="uid://c1867rm23aq7r" path="res://scripts/util/text_flip_pop.gd" id="4_mu3hj"]
[ext_resource type="Material" uid="uid://crvkuplrbwn4j" path="res://assets/shaders/locked_out.tres" id="5_np7sg"]

[node name="PagesMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_np7sg")
script = ExtResource("2_3jqky")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
material = ExtResource("3_3jqky")
layout_mode = 2
text = "Pages"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_mu3hj")
flip_chance = 0.025
blink_chance = 0.07
blink_duration = 0.1

[node name="Delve_Button" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
size_flags_horizontal = 4
text = "  Delve Deeper  "
icon_alignment = 1

[node name="Inspire_Button" type="Button" parent="CenterContainer/VBoxContainer"]
material = ExtResource("5_np7sg")
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "  Inspire Fear  "

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Login_Button" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " Login "

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="CenterContainer/VBoxContainer/Delve_Button" to="." method="_on_delve_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Login_Button" to="." method="_on_login_button_pressed"]
